register ebooks part1

--- a/ebooks-rest/pom.xml
+++ b/ebooks-rest/pom.xml
@@ -37,6 +37,13 @@
 			<artifactId>cdi-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+			<version>3.3.0.Final</version>
+			<scope>provided</scope>
+		</dependency>
   </dependencies>
   
   <build>
